Flash of white when loading a page after a web process crash https://bugs.webkit.org/show_bug.cgi?id=70615 <rdar://problem/10306906>

Reviewed by Darin Adler.

* UIProcess/API/mac/WKView.mm:
(-[WKView _processDidCrash]):
(-[WKView _didRelaunchProcess]):
Remove calls to setNeedsDisplay here.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processDidCrash):
Call setNeedsDisplay, but only if calling out to the loader client didn't relaunch the web process.

* WebProcess/WebPage/DrawingArea.h:
(WebKit::DrawingArea::setPaintingEnabled):
* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::DrawingAreaImpl):
(WebKit::DrawingAreaImpl::setNeedsDisplay):
(WebKit::DrawingAreaImpl::scroll):
(WebKit::DrawingAreaImpl::setPaintingEnabled):
* WebProcess/WebPage/DrawingAreaImpl.h:
Add a way to disable painting completely for a drawing area.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage):
Disable painting while setting up the web page, otherwise we'll get paint requests when we set the
active state of the web page.

Canonical link: https://commits.webkit.org/86818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98113 268f45cc-cd09-0410-ab3c-d52691b4dbfc