Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -228,6 +228,8 @@ WebPage::WebPage(uint64_t pageID, const WebPageCreationParameters& parameters)
     platformInitialize();
 
     m_drawingArea = DrawingArea::create(this, parameters);
+    m_drawingArea->setPaintingEnabled(false);
+
     m_mainFrame = WebFrame::createMainFrame(this);
 
     setDrawsBackground(parameters.drawsBackground);
@@ -245,6 +247,8 @@ WebPage::WebPage(uint64_t pageID, const WebPageCreationParameters& parameters)
     
     if (!parameters.sessionState.isEmpty())
         restoreSession(parameters.sessionState);
+
+    m_drawingArea->setPaintingEnabled(true);
 
 #ifndef NDEBUG
     webPageCounter.increment();
